--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,6 @@
 <html>
 <meta charset=utf-8/>
 <link rel="stylesheet" href="/style.css" />
-<title>Lauri's Homepage</title>
+<title>Rojektiluarnio</title>
 <div id=app></div>
 <script src="/bundle.js"></script>
